<!-- layout_create_account.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="92dp"
            android:layout_height="109dp"
            android:background="@drawable/logo" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jj"
            android:textSize="35sp"
            android:textAlignment="center"
            android:fontFamily="@font/kellyslab"
            android:textColor="#0DCDD9"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/embark1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textColor="#000000"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/embark2"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textColor="#000000"
            android:layout_marginTop="10dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_google"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_blank"
            android:textColor="#5B5B5B"
            android:id="@+id/get_started_button"
            android:textAllCaps="false"
            >
        </Button>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginVertical="10dp"
            >
            <View
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="1dp"
                android:background="#D8D7D7"
                android:layout_marginTop="3dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="  or  "
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#434242"/>
            <View
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="1dp"
                android:background="#D8D7D7"
                android:layout_marginTop="3dp"/>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="Create Account"
            android:textAllCaps="false"
            android:id="@+id/login_prev_sign_up"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginTop="3dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account_term"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="#5B5B5B"
            android:lineSpacingExtra="3sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginVertical="30dp"
            android:gravity="bottom">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Already have an account?"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginBottom="15dp"
                android:textStyle="bold"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sign in"
                android:textStyle="bold"
                android:id="@+id/login_prev_sign_in"
                android:textSize="18sp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/button_blank"
                android:textColor="@color/button"
                android:textAllCaps="false"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
